# how

./: .gitignore  Makefile  README.md  go.mod
cmd/how/: main.go
internal/api/: gemini.go
internal/clipboard/: clipboard.go
internal/config/: config.go
internal/context/: context.go
internal/ui/: ui.go
original/: .gitignore  README.md  pyproject.toml
original/how/: main.py
